second part commit

--- a/index.html
+++ b/index.html
@@ -20,9 +20,31 @@
     </content>
     <content >
         <main class="future">
-            <h4>The Vision of Future</h4>
-            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in <br>renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <h4 class="futureh4">The Vision of Future</h4>
+            <p class="futurep">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in <br>renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
         </main>
+        <div class="main">
+        <div class="fdiv">
+            <img class="light" src="assets/card-icon.png" alt="">
+            <p class="GE">Digital Transformation</p>
+            <p class="GEDESC">Creating a nation wide digital ecosystem to enhance connectivity and access to services for all citizens</p>
+            <button class="bt1">Learn More</button>
+            
+        </div>
+        <div class="sdiv">
+            <img class="light" src="assets/card-icon.png" alt="">
+            <p class="GE">Green Energy</p>
+            <p class="GEDESC">Investments in solar and wind energy to ensure a sustainable and eco-friendly future</p>
+            <button class="bt2">Learn More</button>
+        </div>
+        <div class="tdiv">
+            <img class="light" src="assets/card-icon.png" alt="">
+            <p class="GE">Modern Infrastructure</p>
+            <p class="GEDESC">Building state-of-the-art infrastructure to support economic growth and global competitiveness</p>
+            <button class="bt3">Learn More</button>
+        </div>
+        
+    </div>
     </content>
     <footer>
 
