--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="mcolor">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="mcolor">
     <content class="ban">
         <main class="open-sans-normal">
             <p class="two">Bangladesh 2.0</p>
@@ -75,7 +75,30 @@
                 <img class="satimg" src="assets/satelite.png">
            
         </div>
-        
+    </content>
+
+    <content >
+
+        <div class="donate">
+            <h4 class="donh4">Donate Today</h4>
+            <p class="donp">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+        </div>
+        <div class="fourbuttons"> 
+            <div class="taka100">
+                <p>100 Taka</p>
+            </div>
+            <div class="taka200">
+                <p>200 Taka</p>
+            </div>
+            <div class="taka300">
+                <p>500 Taka</p>
+            </div>
+            <div class="taka400">
+                <p>1000 Taka</p>
+            </div>
+        </div>
+        <div><input class="plc" placeholder="Other Amount (Taka)"></input>
+        </div>
     </content>
     <footer>
 
