--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
         
     </div>
     </content>
-
+    <content>
+        <div class="yunus">
+            <img src="assets/quote-bg.png">
+            <p>Muhammad Yunus (born 28 June 1940) is a Bangladeshi economist, entrepreneur, politician, and civil society leader, who has been serving as Chief Adviser of the Interim Government of Bangladesh since 8 August 2024.Yunus was awarded the Nobel Peace Prize in 2006 for founding the Grameen Bank and pioneering the concepts of microcredit and microfinance.</p>
+            <h2>Dr. Muhammad Yunus</h2>
+            <p>Chief Advisor of the People`s Republic of Bangladesh</p>
+        </div>
+    </content>
     <content>
         <div class="News">
             <h4 class="newsfont">Recent News</h4>
@@ -99,9 +106,16 @@
         </div>
         <div><input class="plc" placeholder="Other Amount (Taka)"></input>
         </div>
+        <div class="divbtn">
+        <button class="dbtn">Donate Now</button>
+    </div>
     </content>
-    <footer>
-
+    <footer class="free">
+        <h3 class="foot">Bangladesh 2.0</h3>
+        <div class="footimg"><img src="assets/facebook.png">
+        <img src="assets/instagram.png">
+        <img src="assets/x.png">
+    </div>
     </footer>
     
 </body>
